build/log/idf_py_stdout_output_10225
[1/11] Performing build step for 'bootloader'
[1/1] cd /home/seb/Desktop/projects/dht11_esp_driver/build/bootloader/esp-idf/esptool_py && /home/seb/.espressif/python_env/idf5.2_py3.10_env/bin/python /home/seb/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/seb/Desktop/projects/dht11_esp_driver/build/bootloader/bootloader.bin
Bootloader binary size 0x6910 bytes. 0x6f0 bytes (6%) free.
[2/9] Building C object esp-idf/dht_driver/CMakeFiles/__idf_dht_driver.dir/dht_driver.c.obj
FAILED: esp-idf/dht_driver/CMakeFiles/__idf_dht_driver.dir/dht_driver.c.obj 
/home/seb/.espressif/tools/xtensa-esp32-elf/esp-12.2.0_20230208/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.2-dev-2756-g2bc1f2f574\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/seb/Desktop/projects/dht11_esp_driver/build/config -I/home/seb/Desktop/projects/dht11_esp_driver/components/dht_driver/include -I/home/seb/esp/esp-idf/components/newlib/platform_include -I/home/seb/esp/esp-idf/components/freertos/config/include -I/home/seb/esp/esp-idf/components/freertos/config/include/freertos -I/home/seb/esp/esp-idf/components/freertos/config/xtensa/include -I/home/seb/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/seb/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/seb/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/seb/esp/esp-idf/components/freertos/esp_additions/include -I/home/seb/esp/esp-idf/components/esp_hw_support/include -I/home/seb/esp/esp-idf/components/esp_hw_support/include/soc -I/home/seb/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/seb/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/seb/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/seb/esp/esp-idf/components/heap/include -I/home/seb/esp/esp-idf/components/log/include -I/home/seb/esp/esp-idf/components/soc/include -I/home/seb/esp/esp-idf/components/soc/esp32 -I/home/seb/esp/esp-idf/components/soc/esp32/include -I/home/seb/esp/esp-idf/components/hal/esp32/include -I/home/seb/esp/esp-idf/components/hal/include -I/home/seb/esp/esp-idf/components/hal/platform_port/include -I/home/seb/esp/esp-idf/components/esp_rom/include -I/home/seb/esp/esp-idf/components/esp_rom/include/esp32 -I/home/seb/esp/esp-idf/components/esp_rom/esp32 -I/home/seb/esp/esp-idf/components/esp_common/include -I/home/seb/esp/esp-idf/components/esp_system/include -I/home/seb/esp/esp-idf/components/esp_system/port/soc -I/home/seb/esp/esp-idf/components/esp_system/port/include/private -I/home/seb/esp/esp-idf/components/xtensa/esp32/include -I/home/seb/esp/esp-idf/components/xtensa/include -I/home/seb/esp/esp-idf/components/xtensa/deprecated_include -I/home/seb/esp/esp-idf/components/lwip/include -I/home/seb/esp/esp-idf/components/lwip/include/apps -I/home/seb/esp/esp-idf/components/lwip/include/apps/sntp -I/home/seb/esp/esp-idf/components/lwip/lwip/src/include -I/home/seb/esp/esp-idf/components/lwip/port/include -I/home/seb/esp/esp-idf/components/lwip/port/freertos/include -I/home/seb/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/seb/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/seb/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/seb/esp/esp-idf/components/driver/include -I/home/seb/esp/esp-idf/components/driver/deprecated -I/home/seb/esp/esp-idf/components/driver/analog_comparator/include -I/home/seb/esp/esp-idf/components/driver/dac/include -I/home/seb/esp/esp-idf/components/driver/gpio/include -I/home/seb/esp/esp-idf/components/driver/gptimer/include -I/home/seb/esp/esp-idf/components/driver/i2c/include -I/home/seb/esp/esp-idf/components/driver/i2s/include -I/home/seb/esp/esp-idf/components/driver/ledc/include -I/home/seb/esp/esp-idf/components/driver/mcpwm/include -I/home/seb/esp/esp-idf/components/driver/parlio/include -I/home/seb/esp/esp-idf/components/driver/pcnt/include -I/home/seb/esp/esp-idf/components/driver/rmt/include -I/home/seb/esp/esp-idf/components/driver/sdio_slave/include -I/home/seb/esp/esp-idf/components/driver/sdmmc/include -I/home/seb/esp/esp-idf/components/driver/sigma_delta/include -I/home/seb/esp/esp-idf/components/driver/spi/include -I/home/seb/esp/esp-idf/components/driver/temperature_sensor/include -I/home/seb/esp/esp-idf/components/driver/touch_sensor/include -I/home/seb/esp/esp-idf/components/driver/twai/include -I/home/seb/esp/esp-idf/components/driver/uart/include -I/home/seb/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/seb/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/seb/esp/esp-idf/components/esp_pm/include -I/home/seb/esp/esp-idf/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/seb/Desktop/projects/dht11_esp_driver=. -fmacro-prefix-map=/home/seb/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/dht_driver/CMakeFiles/__idf_dht_driver.dir/dht_driver.c.obj -MF esp-idf/dht_driver/CMakeFiles/__idf_dht_driver.dir/dht_driver.c.obj.d -o esp-idf/dht_driver/CMakeFiles/__idf_dht_driver.dir/dht_driver.c.obj -c /home/seb/Desktop/projects/dht11_esp_driver/components/dht_driver/dht_driver.c
/home/seb/Desktop/projects/dht11_esp_driver/components/dht_driver/dht_driver.c: In function 'send_signal':
/home/seb/Desktop/projects/dht11_esp_driver/components/dht_driver/dht_driver.c:23:5: error: implicit declaration of function 'ets_delay_us'; did you mean 'esp_rom_delay_us'? [-Werror=implicit-function-declaration]
   23 |     ets_delay_us(20 * 1000);
      |     ^~~~~~~~~~~~
      |     esp_rom_delay_us
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
